fixed hamburger icon mobile issue

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -93,7 +93,14 @@
         transform: none;
         padding: 10px;
         box-sizing: border-box;
+        margin-top: 50px;
     }
+
+    h1 {
+      font-size: 40px;
+      white-space: nowrap;
+    }
+
 
     .flat-button {
         float: none;
