--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -126,6 +126,7 @@
         display: block;
         padding: 20px;
         box-sizing: border-box;
+        margin-top: 45px;
       }
     }
   }
